# rms-ui

./: .devenv.flake.nix  .eslintrc.cjs  .gitignore  CONTRIBUTING.md  Makefile  README.md  devenv.nix  eslint.config.mjs  flake.nix  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: publish.yml
e2e/: editor.test.ts  grid.test.ts  home.test.ts
e2e/grid/: grid.md
e2e/home/: home.md
e2e/source-editor/: source-editor.md
e2e/view-editor/: view-editor.md
ios/: Package.swift  README.md
ios/Sources/: ExamplePlugin.swift
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json  migrated.json
src-tauri/src/: lib.rs  main.rs  tauri_traffic_light_positioner_plugin.rs
src/components/add-button/: AddButton.module.css  AddButton.tsx
src/components/add-filter-dialog/: AddFilterDialog.module.css  AddFilterDialog.tsx
src/components/create-collection-dialog/: CreateCollectionDialog.css  CreateCollectionDialog.module.css  CreateCollectionDialog.tsx
src/components/directions/: DirectionsList.module.css  DirectionsList.tsx
src/components/dropdown/: Dropdown.module.css  Dropdown.tsx
src/components/grid-item/: GridItem.module.css  GridItem.tsx
src/components/image-uploader/: ImageUploader.module.css  ImageUploader.tsx
src/components/info-bar/: InfoBar.css  InfoBar.module.css  InfoBar.tsx
src/components/infobar/: InfoBar.css
src/components/ingredients/: IngredientsList.module.css  IngredientsList.tsx
src/components/no-file/: NoFile.module.css  NoFile.tsx
src/components/notes/: NotesList.module.css  NotesList.tsx
src/components/properties/: Properties.css  Properties.module.css  Properties.tsx
src/components/recipe-header/: RecipeHeader.module.scss  RecipeHeader.tsx
src/contexts/: ThemeContext.tsx
src/services/: FileService.ts  fs.tsx  index.ts  md.tsx
src/utils/: collection.ts  collection.tsx  filter.ts  filter.tsx  fs.ts  fs.tsx  hooks.ts  recipe.ts  recipe.tsx
test/: fake-recipe.json  recipe-image.txt
(+26 files in other folders)
