[package]
name = "rms"
version = "0.0.0"
description = "Local-first recipe management system inspired by Obsidian"
authors = ["Justin Waltrip"]
license = ""
repository = "https://github.com/justinwaltrip/rms"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = [ "window-unmaximize", "window-hide", "window-minimize", "window-show", "window-close", "window-maximize", "window-start-dragging", "window-unminimize", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
