[package]
name = "rms"
version = "0.2.0-alpha"
description = "Local-first recipe management system inspired by Obsidian"
authors = ["Justin Waltrip"]
license = ""
repository = "https://github.com/justinwaltrip/rms"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [ "protocol-asset"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fork = "0.2"
tauri-plugin-fs = "2.0.0-rc"
tauri-plugin-shell = "2.0.0-rc"
tauri-plugin-dialog = "2.0.3"
tauri-plugin-os = "2.0.0-rc"
tauri-plugin-icloud = { git = "https://github.com/justinwaltrip/tauri-plugin-icloud.git" }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26.0"
objc = "0.2.7"
rand = "0.9.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
